--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <ul>
       <li>Attend weekly meetings in Room 213</li>
       <ul>
-        <li>Currently Mondays after school</li>
+        <li>Currently Mondays during lunch and after school 3:30-4:30 PM</li>
       </ul>
       <li>Join the CSC <a href="https://discord.gg/kUd3m8HMG8">Discord Server</a></li>
       <li>Join our IRC channel at ##bfhs-open on libera.chat</li>
+      <li> Join our Google Classroom</li>
     </ul>
 
     <h1>How to participate</h1>
